--- a/index.html
+++ b/index.html
@@ -3,33 +3,42 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Temperature Converter</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Netflix India - Watch TV Shows Online, Watch Movies Online</title>
 </head>
-
 <body>
-    <div id="converter" class="container">
-        <h1>Temperature converter</h1>
-        <br>
-        <div id="text-and-clear">
-            <input type="text" id="temp-to-convert">
-            <button type="button" class="btn btn-light" id="clear">Clear</button>
-        </div>
-        <h3>Coverted to:</h3>
-        <div id="tempButtons" class="container">
-            <input type="radio" id="fahrenheit-radio" name="temp" value="fahrenheit">Fahrenheit<br>
-            <input type="radio" id="celsius-radio" name="temp" value="celsius">Celsius<br>
-        </div>
-        <button type="button" class="btn btn-primary" id="convert-button">Convert!</button>
-        <div id="temp-zone" class="container">
-            <p id="converted"></p>
+
+    <div class="container">
+        <nav class="navbar">
+            <div class="left">
+                <img src="images/netflix-logo.png" alt="">
+            </div>
+            <div class="right">
+                <select name="language" class="language">
+                    <option value="English">English</option>
+                    <option value="Hindi">Hindi</option>
+                </select>
+                <button><a href="#">Sign In</a></button>
+            </div>
+        </nav>
+
+        <div class="title">
+            <div class="content">
+                <h1>Unlimited movies, TV shows and more.</h1>
+                <h2>Watch anywhere. Cancel anytime.</h2>
+                <form action="#">
+                    <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
+                    <div class="email">
+                        <input type="email" name="email" placeholder="Email address">
+                        <button><a href="#">Get Started  ></a></button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-    <script src="main.js"></script>
-</body>
 
+
+</body>
 </html>
